--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,14 @@
 <div class="banner">
-  <a href="http://software-carpentry.org" title="Software Carpentry">
-    <img alt="Software Carpentry banner" src="{{site.swc_site}}/img/software-carpentry-banner.png" />
-  </a>
+    <div class="row">
+        <div class="col-md-6" style="padding-left:50px">
+            <a href="http://openastronomy.org" title="OpenAstronomy">
+                <img alt="Open Astronomy banner" height="130px" src="/img/logoOA.png" />
+            </a>
+        </div>
+        <div class="col-md-6">
+            <a href="http://software-carpentry.org" title="Software Carpentry">
+                <img alt="Software Carpentry banner" height="120px" src="{{site.swc_site}}/img/software-carpentry-banner.png" />
+            </a>
+        </div>
+    </div>
 </div>
