--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6" style="padding-left:50px">
             <a href="http://openastronomy.org" title="OpenAstronomy">
-                <img alt="Open Astronomy banner" height="130px" src="/img/logoOA.png" />
+                <img alt="Open Astronomy banner" height="130px" src="img/logoOA.png" />
             </a>
         </div>
         <div class="col-md-6">
