--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@
 -->
 <html>
   <head>
-    <title>OpenAstronomy Workshopj: {{ page.venue }}</title>
+    <title>OpenAstronomy Workshop: {{ page.venue }}</title>
     {% include header.html %}
   </head>
   <body class="workshop">
